# siitool

./: .gitattributes  .gitignore  CMakeLists.txt  Changelog  LICENSE  Makefile  README  README.md  README.rst  README~  conanfile.txt  crc8.c  crc8.h  doxygen.css  esi.c  esi.h  esifile.c  esifile.h  examples.html  examples.js  graph_legend.html  index.html  main.c  navtree.css  navtree.js  navtreeindex0.js  pages.html  params.json  sii.c  sii.h  sii_example.asc  sii_example.description  siitool.1  stringlist.c  stringlist.h  synapticon.css  tabs.css
d0/d28/: Somanet_CiA402-single_8xml-example.html
d2/d78/: static_pubsub_8c-example.html
d3/da5/: manual.html
d4/df0/: Synapticon.html
d5/df4/: Somanet_CtrlProto_8xml-example.html
d6/d17/: sii_example_8bin-example.html
d7/d94/: Somanet_CiA402-multi_8xml-example.html
d8/d83/: Legal.html
dc/d08/: version.html
de/d1b/: CMakeLists_8txt-example.html
doc/: config.file  index.rst
doc/additional_doc/: main.dox
doc/style/: footer.html
examples/: EtherCATBase.xsd  EtherCATDiag.xsd  EtherCATDict.xsd  EtherCATInfo.xsd  README  Somanet_CiA402-multi.xml  Somanet_CiA402-single.xml  Somanet_CtrlProto.xml  xmlvalidate.sh
examples/ModulesSlots_DS402_Simple/: ETG2001_ModulesSlots_CiA402.xml  EtherCATBase.xsd  EtherCATInfo.xsd
misc/: canobjecttable.txt  genprofile.pl  mansections.txt
scripts/: getversion
search/: all_0.js  all_1.js  files_0.js  pages_0.js  pages_1.js  pages_2.js  search.css  search.js
